appId: com.goldendoodle.expoapp
---
- assertVisible: "📍 Campus Map"
- tapOn: "📍 Campus Map"
- tapOn: "Map Marker"
- tapOn: ", Class"
- assertVisible: "Next Class"
- assertVisible: "9:00 AM-10:00 AM"
- assertVisible: "Room: H831"
- assertVisible: "Building: Hall Building"
- assertVisible: "Campus: SGW"
- assertVisible: "GET DIRECTIONS"
- assertVisible: "CLOSE"
- tapOn: "GET DIRECTIONS"
- tapOn: ", Class"
- tapOn: "CLOSE"
- assertVisible: ", Eat"
- tapOn: ", Eat"
- assertVisible: "Map Marker"
- tapOn: ", Eat"
- assertVisible: ", SGW"
- tapOn: ", SGW"
- assertVisible: ""
- tapOn: ""
- assertVisible: ", , View Loyola Campus"
- assertVisible: "View Campus Map"
- assertVisible: "Dark Mode"
- tapOn: ", , View Loyola Campus"
- assertVisible: "Map Marker"
- tapOn:
    point: "86%,33%"
- tapOn: ""
