appId: com.goldendoodle.expoapp
---
- assertVisible: "Welcome Back, Steven"
- assertVisible: ", Home "
- assertVisible: ", Services "
- assertVisible: ", Report "
- assertVisible: ", Settings "
- assertVisible: "Optimize Route"
- assertVisible: ""
- tapOn: ""
